--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,53 @@
-version: 2
-orbs:
-    node: circleci/node@4.3.0
-    gcp-cli: circleci/gcp-cli@1.0.0
-jobs:
-    compile-frontend:
-        executor:
-            name: node
-            tag: 14.17.0
-        steps:
-            - checkout
-            - node/install-packages:
-                pkg-manager: yarn
-            - run:
-                name: Build production files
-                command: |
-                    yarn run build
-    rsync-bucket:
-        executor: gcp-cli/google
-        steps:
-            - gcp-cli/initialize:
-                gcloud-service-key: SERVICE_ACCOUNT_KEY
-                google-compute-region: us-east4
-                google-project-id: $PROJECT_ID
-            - checkout
-            - run:
-                name: RSync dist directory with bucket
-                command: |
-                    gsutil ls gs://${BUCKET_NAME}/
+version: 2.1
 
-workflow:
-    version: 2
-    deploy:
-        jobs:
+orbs:
+  node: circleci/node@4.3.0
+  gcp-cli: circleci/gcp-cli@1.0.0
+
+jobs:
+
+  compile-frontend:
+    executor:
+      name: node/default
+      tag: 14.17.0
+    steps:
+      - checkout
+      - node/install-packages:
+          pkg-manager: yarn
+      - run:
+          name: Build production files
+          command: |
+            yarn run build
+
+  rsync-bucket:
+    executor: gcp-cli/google
+    environment:
+        GCP_REGION: us-east4
+    steps:
+      - gcp-cli/initialize:
+          # From context
+          gcloud-service-key: SERVICE_ACCOUNT_KEY
+          # From env block above
+          google-compute-region: GCP_REGION
+          # From context
+          google-project-id: PROJECT_ID
+      - checkout
+      - run:
+          name: RSync dist directory with bucket
+          command: |
+            gsutil ls gs://${BUCKET_NAME}/
+
+workflows:
+  version: 2
+  deploy:
+    jobs:
+      - compile-frontend
+      - rsync-bucket:
+          context: "Personal Website Project"
+          requires: 
             - compile-frontend
-            - rsync-bucket:
-                context: "Personal Website Project"
-                requires: compile-frontend
+          filters:
+            branches:
+              only:
+                - master
 
