--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "d3": "^6.7.0",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.2.5",
     "sass": "^1.32.13",
     "typescript": "^4.1.3",
     "vite": "^2.3.0",
